# iherb-cli

./: .gitignore  ADAPTION_PLAN.md  Cargo.toml
fixtures/: iherb-product-104996-california-gold-nutrition-multivitamin-and-mineral-with-methyl-b12-vitamin-c-l-methylfolate-and-quercetin-two-a-day-60-veggie-capsules.htm  iherb-product-108255-california-gold-nutrition-high-potency-vitamin-b-complex-with-methyl-folate-methyl-b12-90-veggie-capsules.html  iherb-product-59561-california-gold-nutrition-gold-c-powder-usp-grade-vitamin-c-1-000-mg-8-81-oz-250-g.html  iherb-search-vitamin_c.html
skills/iherb-agent/: SKILL.md
skills/iherb-agent/agents/: openai.yaml
src/: cli.rs  config.rs  main.rs  model.rs  output.rs
src/browser/: session.rs
src/scraper/: navigation.rs  product.rs  search.rs
